--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -36,4 +36,4 @@ jobs:
     - uses: r-lib/actions/setup-pandoc@v1
       with:
         pandoc-version: '2.7.3' # The pandoc version to download (if necessary) and use.
-    - run: echo "# Test" | pandoc -t html
+    - run: echo "# Test" | pandoc -t pdf > resume.pdf
