--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -11,21 +11,44 @@ on:
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: Advanced Usage
+
+on: push
 
 jobs:
-  generate_pdf:
-    runs-on: ubuntu-latest
-    steps:
-      - name: My first step
-        uses: docker://pandoc/latex:2.6
-      - run: pandoc README.md --pdf-engine=xelatex -o resume_master_v1.pdf
   convert_via_pandoc:
     runs-on: ubuntu-18.04
     steps:
-      - run: echo "foo" > input.txt  # create an example file
-      - uses: docker://pandoc/core:2.9
+      - uses: actions/checkout@v2
+      - run: |
+          echo "Lorem ipsum" > lorem_1.md  # create two example files
+          echo "dolor sit amet" > lorem_2.md
+          mkdir output  # create output dir
+          # this will also include README.md
+          echo "::set-env name=FILELIST::$(printf '"%s" ' *.md)"
+      - uses: docker://pandoc/latex:2.9
         with:
-          args: README.md --pdf-engine=xelatex -o resume_master_v1.pdf
+          args:  `{{GITHUB_WORKSPACE}}/README.md` --pdf-engine=xelatex -o resume_master_v1.pdf
+      - uses: actions/upload-artifact@master
+        with:
+          name: output
+          path: output
+
+# jobs:
+#   generate_pdf:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: My first step
+#         uses: docker://pandoc/latex:2.6
+#       - run: pandoc README.md --pdf-engine=xelatex -o resume_master_v1.pdf
+#   convert_via_pandoc:
+#     runs-on: ubuntu-18.04
+#     steps:
+#       - uses: actions/checkout@v2
+#       - run: echo "foo" > input.txt  # create an example file
+#       - uses: docker://pandoc/core:2.9
+#         with:
+#           args: README.md --pdf-engine=xelatex -o resume_master_v1.pdf
 #   my_first_job:
 #     steps:
 #       - name: My first step
