--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-*.fls
+# .env file contains default environment variables for docker
+.env
+.git/
+
+### Node template
+# Logs
+logs
 *.log
-*.fdb_latexmk
-*.aux
+npm-debug.log*
+# Dependency directory
+# https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
+node_modules
+
+
+# vscode workspace files are user-specific
+*.sublime-workspace
+
+# Folder config file
+Desktop.ini
